# code-reviewer

./: .env.example  .env.production.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  litellm_config.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .pymon  alembic.ini  requirements-desktop.txt  requirements.txt
backend/agents/: physics_pipeline.py  pipeline.py  state.py
backend/alembic/: env.py
backend/app/: celery_app.py  main.py
backend/tests/: test_api.py  test_company.py  test_enterprise.py  test_gitlab_service.py  test_gitlab_webhook.py  test_governance.py  test_marketplace.py  test_memory.py  test_org_deploy.py  test_review_events.py  test_science.py  (+3 more)
cli/: pyproject.toml
cli/swarmforge/: __init__.py  client.py  config.py  mcp_server.py  providers.py  reviewer.py
cli/swarmforge/cli/: __init__.py  cmd_community.py  cmd_company.py  cmd_enterprise.py  cmd_governance.py  cmd_marketplace.py  cmd_memory.py  cmd_misc.py  cmd_review.py  cmd_science.py  cmd_template.py  cmd_world_model.py  main.py
cli/swarmforge/mcp/: __init__.py  registry.py  tools_community.py  tools_company.py  tools_enterprise.py  tools_governance.py  tools_marketplace.py  tools_memory.py  tools_misc.py  tools_review.py  tools_science.py  tools_template.py  tools_world_model.py
desktop/: .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  package-lock.json  package.json
nginx/: nginx.conf  nginx.ssl.conf
(+136 files in other folders)
