[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "swarmforge"
version = "1.0.0"
description = "SwarmForge CLI and MCP Server"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "click>=8.1",
    "mcp>=1.0",
    "rich>=13",
]

[project.scripts]
swarmforge = "swarmforge.cli.main:cli"
swarmforge-mcp = "swarmforge.mcp_server:main"
